# gap_detect_v3_project

./: .dockerignore  .gitmodules  CHECKLIST.md  CLAUDE.md  Dockerfile.noetic_integration  PLAN.md  README.md  cartographer.repos  docker-compose.noetic_integration.yml
docs/: navigation_algorithms.md  navigation_bugfix_log.md
src/TR-200/woosh_bringup/: CMakeLists.txt  package.xml
src/TR-200/woosh_bringup/launch/: bringup.launch  cmd_vel_adapter.launch  static_tf.launch  woosh_navigation_system.launch  woosh_rviz_debug.launch
src/TR-200/woosh_bringup/logs/: nav_cmd_20260326_062331.csv  nav_cmd_20260326_062502.csv  nav_cmd_20260326_062711.csv  nav_cmd_20260326_064221.csv  nav_cmd_20260326_064501.csv  nav_cmd_20260326_064807.csv  nav_cmd_20260326_071646.csv  nav_cmd_20260326_072223.csv  nav_cmd_20260326_073753.csv  nav_cmd_20260326_075507.csv  nav_cmd_20260326_092545.csv  nav_cmd_20260326_093723.csv  nav_cmd_20260326_094848.csv  nav_cmd_20260330_061759.csv  nav_cmd_20260330_061843.csv  nav_cmd_20260331_042320.csv
src/TR-200/woosh_bringup/rviz/: woosh_rviz_debug.rviz
src/TR-200/woosh_bringup/scripts/: cmd_vel_adapter.py  woosh_rviz_debug.py  woosh_service_driver.py
src/TR-200/woosh_control/: CMakeLists.txt  package.xml
src/TR-200/woosh_msgs/: CMakeLists.txt  package.xml
src/TR-200/woosh_msgs/srv/: MoveMobile.srv
src/TR-200/woosh_navigation/AMCL/: CMakeLists.txt  package.xml
src/TR-200/woosh_navigation/AMCL/config/: amcl_params.yaml
src/TR-200/woosh_navigation/AMCL/docs/: amcl_guide.md
src/TR-200/woosh_navigation/AMCL/launch/: amcl.launch
src/TR-200/woosh_navigation/AMCL/rviz/: amcl_debug.rviz
src/TR-200/woosh_navigation/AMCL/scripts/: export_map.py  woosh_sensor_bridge.py
src/TR-200/woosh_navigation/Costmap/woosh_costmap/: CMakeLists.txt  package.xml
src/TR-200/woosh_navigation/Costmap/woosh_costmap/config/: costmap_common_params.yaml  global_costmap_params.yaml
src/TR-200/woosh_navigation/Costmap/woosh_costmap/launch/: global_costmap.launch
src/TR-200/woosh_navigation/Costmap/woosh_costmap/rviz/: costmap_debug.rviz
src/TR-200/woosh_navigation/MoveBase/woosh_navigation_mb/: CMakeLists.txt  package.xml
src/TR-200/woosh_navigation/MoveBase/woosh_navigation_mb/config/: global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  move_base_params.yaml
src/TR-200/woosh_navigation/MoveBase/woosh_navigation_mb/launch/: move_base_only.launch  navigation.launch
src/TR-200/woosh_navigation/MoveBase/woosh_navigation_mb/rviz/: navigation.rviz
src/TR-200/woosh_robot_py/: .gitignore  CMakeLists.txt  README.md  __init__.py  package.xml  requirements.txt  setup.py  woosh_base.py  woosh_interface.py  woosh_robot.py  woosh_robot_agent.py
src/TR-200/woosh_robot_py/cli/: __init__.py  base_menu.py  main.py  map_info_menu.py  robot_info_menu.py  robot_request_menu.py  robot_setting_menu.py  robot_subscribe_menu.py  ros_action_menu.py
src/TR-200/woosh_robot_py/docs/: pose_speed_pose_guide.md
src/TR-200/woosh_robot_py/examples/: check_imu.py  demo_lite.py  monitor.py
src/TR-200/woosh_robot_py/woosh/: __init__.py  logger.py  message_pack.py  message_serializer.py  ws_commu.py
src/TR-200/woosh_robot_py/woosh/proto/: __init__.py
src/TR-200/woosh_robot_py/woosh/proto/custom/: __init__.py  custom_pb2.py  custom_pb2.pyi
src/TR-200/woosh_robot_py/woosh/proto/device/: beacon_pb2.py  beacon_pb2.pyi  callbox_pb2.py  callbox_pb2.pyi  device_pb2.py  device_pb2.pyi  elevator_pb2.py  elevator_pb2.pyi  sensor_pb2.py  sensor_pb2.pyi
src/TR-200/woosh_robot_py/woosh/proto/dispatch/: kanban_pb2.py  kanban_pb2.pyi  robot_commu_pb2.py  robot_commu_pb2.pyi  robot_pb2.py  robot_pb2.pyi  system_pb2.py  system_pb2.pyi  taskexec_pb2.py  taskexec_pb2.pyi  traffic_commu_pb2.py  traffic_commu_pb2.pyi
src/TR-200/woosh_robot_py/woosh/proto/map/: field_pb2.py  field_pb2.pyi  map_edit_pb2.py  map_pack_pb2.py  map_pack_pb2.pyi  mark_pb2.py  mark_pb2.pyi  path_pb2.py  path_pb2.pyi  storage_edit_pb2.py  storage_edit_pb2.pyi
src/TR-200/woosh_robot_py/woosh/proto/robot/: robot_count_pb2.py  robot_count_pb2.pyi  robot_pack_pb2.py  robot_pack_pb2.pyi  robot_pb2.py  robot_pb2.pyi  robot_setting_pb2.py  robot_setting_pb2.pyi
src/TR-200/woosh_robot_py/woosh/proto/ros/: action_pb2.py  action_pb2.pyi  ros_pack_pb2.py  ros_pack_pb2.pyi
src/TR-200/woosh_robot_py/woosh/proto/task/: task_pb2.py  task_pb2.pyi  woosh_task_pb2.py  woosh_task_pb2.pyi
src/TR-200/woosh_robot_py/woosh/proto/util/: action_pb2.py  action_pb2.pyi  common_pb2.py  common_pb2.pyi  commu_pack_pb2.py  commu_pack_pb2.pyi  device_pb2.py  device_pb2.pyi  map_pb2.py  map_pb2.pyi  navigation_pb2.py  navigation_pb2.pyi  robot_pb2.py  robot_pb2.pyi  task_pb2.py  task_pb2.pyi
src/TR-200/woosh_sensor_bridge/: CMakeLists.txt  package.xml
src/TR-200/woosh_sensor_bridge/launch/: sensor_bridge.launch
src/TR-200/woosh_sensor_bridge/scripts/: woosh_sensor_bridge.py
src/TR-200/woosh_slam/Cartographer/woosh_slam_cartographer/: CMakeLists.txt  package.xml
src/TR-200/woosh_slam/Cartographer/woosh_slam_cartographer/config/: cartographer_2d.lua  cartographer_2d_localization.lua  cartographer_2d_localization_fix.lua
src/TR-200/woosh_slam/Cartographer/woosh_slam_cartographer/docs/: cartographer_guide.md
src/TR-200/woosh_slam/Cartographer/woosh_slam_cartographer/launch/: cartographer.launch  cartographer_localization.launch  save_map.launch  save_state.launch
src/TR-200/woosh_slam/Cartographer/woosh_slam_cartographer/rviz/: cartographer_debug.rviz
src/TR-200/woosh_slam/Cartographer/woosh_slam_cartographer/scripts/: save_cartographer_state.sh
src/TR-200/woosh_slam/GMapping/woosh_slam_gmapping/: CMakeLists.txt  package.xml
src/TR-200/woosh_slam/GMapping/woosh_slam_gmapping/config/: gmapping_params.yaml
src/TR-200/woosh_utils/: CMakeLists.txt  package.xml  setup.py
src/TR-200/woosh_utils/scripts/: battery_check.py
src/TR-200/woosh_utils/src/woosh_utils/: __init__.py  battery_utils.py  sdk_runtime.py
src/main_command/: CMakeLists.txt  package.xml
src/main_command/scripts/: main_system_operation.py
(+38 files in other folders)
