<?xml version="1.0"?>
<package format="2">
  <name>woosh_control</name>
  <version>0.1.0</version>
  <description>Woosh TR-200 control package.</description>

  <maintainer email="djlee2@katech.re.kr">LDJ</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
