<?xml version="1.0"?>
<package format="2">
  <name>woosh_msgs</name>
  <version>0.1.0</version>
  <description>Message and service definitions for Woosh TR-200.</description>

  <maintainer email="djlee2@katech.re.kr">LDJ</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export/>
</package>
