<?xml version="1.0"?>
<package format="2">
  <name>woosh_robot_py</name>
  <version>0.2.1</version>
  <description>Python SDK package wrapper for Woosh robot integrations.</description>

  <maintainer email="djlee2@katech.re.kr">LDJ</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
