<?xml version="1.0"?>
<package format="2">
  <name>woosh_sensor_bridge</name>
  <version>0.1.0</version>
  <description>Woosh TR-200 SDK sensor bridge package.
    Converts Woosh WebSocket SDK data (LiDAR, odometry) into standard ROS topics.
    Publishes /scan (LaserScan), /odom (Odometry), and TF(odom→base_link).
    Used by all modes: standalone, GMapping, Cartographer, AMCL.
  </description>

  <maintainer email="djlee2@katech.re.kr">LDJ</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>woosh_robot_py</depend>

  <export/>
</package>
